--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 </head>
 <body>
     <h1> Odin Recipes </h1>
-    <a href="./recipes/hummingbird-cake.html"> Chef John's Hummingbird Cake </a>
 
+    <ul>
+        <li><a href="./recipes/hummingbird-cake.html"> Chef John's Hummingbird Cake </a></li>
+        <li><a href="./recipes/carrot-cake.html"> Chef John's Carrot Cake </a></li>
+        <li><a href="./recipes/strawberry-crepe-cake.html"> Chef John's Strawberry Crepe Cake </a><li>
+    </ul>
 
 </body>
 </html>
