--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title> Odin Recipes </title>
 </head>
 <body>
-    <h1> Odin Recipes </h1>
-
+    <h1> Odin Recipes: Chef John's Cakes </h1>
     <ul>
         <li><a href="./recipes/hummingbird-cake.html"> Chef John's Hummingbird Cake </a></li>
         <li><a href="./recipes/carrot-cake.html"> Chef John's Carrot Cake </a></li>
