--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <ul>
         <li><a href="./recipes/hummingbird-cake.html"> Chef John's Hummingbird Cake </a></li>
         <li><a href="./recipes/carrot-cake.html"> Chef John's Carrot Cake </a></li>
-        <li><a href="./recipes/strawberry-crepe-cake.html"> Chef John's Strawberry Crepe Cake </a><li>
+        <li><a href="./recipes/strawberry-crepe-cake.html"> Chef John's Strawberry Crepe Cake </a></li>
     </ul>
 
 </body>
