--- a/index.html
+++ b/index.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <title> Odin Recipes </title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
+    <script src="https://kit.fontawesome.com/b439cc8e55.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <h1> Odin Recipes: Chef John's Cakes </h1>
-    <ul>
-        <li><a href="./recipes/hummingbird-cake.html"> Chef John's Hummingbird Cake </a></li>
-        <li><a href="./recipes/carrot-cake.html"> Chef John's Carrot Cake </a></li>
-        <li><a href="./recipes/strawberry-crepe-cake.html"> Chef John's Strawberry Crepe Cake </a></li>
-    </ul>
+    <div class="navbar">
+        <i class="fa-sharp fa-solid fa-utensils"></i>
+        <h2>Odin Recipes</h2>
+        <span class="navigation-items">
+            <a class="current-page" href="#">Home</a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">About Us</a>
+        </span>
+       
+    </div>
+
+    <div class="hero-section">
+        <h1>Odin Recipes: Chef John's Cake</h1>
+    </div>
+
+    <div class="card-container">
+        <div class="card">
+            <img src="./images/hummingbird-cake.webp" alt="hummingbird cake">
+            <a href="./recipes/hummingbird-cake.html">Hummingbird Cake</a>
+        </div>
+        <div class="card">
+            <img src="./images/carrot-cake.webp" alt="carrot-cake">
+            <a href="./recipes/carrot-cake.html">Carrot Cake</a>
+        </div>
+        <div class="card">
+            <img src="./images/strawberry-crepe-cake.webp" alt="strawberry-crepe-cake">
+            <a href="./recipes/strawberry-crepe-cake.html">Strawberry Crepe Cake</a>
+        </div>
+    </div>
 
 </body>
+
 </html>
